--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,1 @@
-/target
-/lib
-/classes
-/checkouts
-pom.xml
-*.jar
-*.class
-/.lein-*
-profiles.clj
-/.env
-.nrepl-port
-/log
-*.iml
-
-figwheel_server\.log
+clojure-getting-started
