--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
+*.js linguist-language=Clojure
+*.css linguist-language=Clojure
+*.html linguist-language=Clojure
 *.js linguist-vendored=false
 *.css linguist-vendored=false
 *.html linguist-vendored=false
