--- a/lessons/lesson-3-reagent-reframe-material-postgresql-crypto/.gitignore
+++ b/lessons/lesson-3-reagent-reframe-material-postgresql-crypto/.gitignore
@@ -13,3 +13,6 @@ pom.xml
 config.json
 profiles.clj
 src/example/heroku_config.clj
+
+
+lessons/lesson-3-reagent-reframe-material-postgresql-crypto/resources/public/js/out/
