--- a/lessons/lesson-2-clojure-postgresql/Procfile
+++ b/lessons/lesson-2-clojure-postgresql/Procfile
@@ -1,1 +1,1 @@
-web: java $JVM_OPTS -cp target/clojure-getting-started-standalone.jar clojure.main -m app.web
+web: java $JVM_OPTS -cp target/pilot.jar clojure.main -m app.web
